# slack-claude-bot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_ja.md  __main__.py  pyproject.toml
docs/: configuration.md  configuration_ja.md  deployment.md  deployment_ja.md  internals.md  internals_ja.md  slack-app-setup.md  slack-app-setup_ja.md
src/slack_claude_bot/: __init__.py  __main__.py  bot.py  cli.py  db.py  runner.py
tests/: test_db.py  test_main.py  test_runner.py
