[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-claude-bot"
version = "0.2.0"
description = "Slack bot that proxies messages to Claude Code CLI with session and lock management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "slack-bolt>=1.20",
]

[project.scripts]
slack-claude-bot = "slack_claude_bot.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/slack_claude_bot"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "CHANGELOG.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
